--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
 <div class="container">
@@ -31,7 +32,9 @@
             <h3>OBJECTIVE</h3>
             <p>Create more professional experience, so that I can develop myself as a person and profession.</p>
             <h3>EXPERIENCE</h3>
-            <p> Project fo the Americas Datafest. <br> Project for the Global Urban Datafest.<br>Intern for 4 months in the area of computer support at Congressa Consultores Asociados, S.C.<br></p>
+            <h4>Project fo the Americas Datafest.</h4> 
+            <h4>Project for the Global Urban Datafest.</h4>
+            <h4>Intern for 4 months in the area of computer support at Congressa Consultores Asociados, S.C.</h4>
             <h3>SKILLS</h3>
             <li>Programming languages: Java, Objective-C</li>
             <li>SQL</li>
